<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HP Native</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="total_price">Total Price:</string>
    <string name="_1">€1</string>
    <string name="_2_5">€2.5</string>
    <string name="_13">€13</string>
    <string name="_5_5">€5.5</string>
    <string name="x2">x2</string>
    <string name="_8">€8</string>
    <string name="x1">x1</string>
    <string name="_10">€10</string>
    <string name="een_app">een app</string>
    <string name="item">Item</string>
    <string name="x3">x3</string>
    <string name="_17">€17</string>
    <string name="confirm_order">Confirm order</string>
    <string name="west_coast">West Coast</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="royal_beef">Royal Beef</string>
    <string name="ingredients_in_burger">ingredients in Burger</string>
    <string name="burger">Burger</string>
    <string name="d_r_m">Dürüm</string>
    <string name="pasta">Pasta</string>
    <string name="pizza">Pizza</string>
    <string name="d_r_m_kebab">Dürüm kebab</string>
    <string name="d_r_m_chicken">Dürüm chicken</string>
    <string name="d_r_m_k_fte">Dürüm köfte</string>
    <string name="d_r_m_merguez">Dürüm merguez</string>
    <string name="ingredients_in_durum">ingredients in Durum</string>
    <string name="welcome_on_nhalalpicker">Welcome on\nHalalPicker!</string>
    <string name="login">login</string>
    <string name="your_order">Your order</string>
    <string name="_40">€40</string>
    <string name="spinach">Spinach</string>
    <string name="shrimp">Shrimp</string>
    <string name="bolognese">Bolognese</string>
    <string name="salmon">Salmon</string>
    <string name="_4_fromages">4 fromages</string>
    <string name="margherita">Margherita</string>
    <string name="chickenpizza">Chickenpizza</string>
    <string name="ingredients_in_pizza">ingredients in Pizza</string>
    <string name="cheese">cheese</string>
    <string name="bread">bread</string>
    <string name="salad">salad</string>
    <string name="beef">beef</string>
    <string name="name">Name</string>
    <string name="john_emro">John Emro</string>
    <string name="johnemro_gmail_com">johnemro@gmail.com</string>
    <string name="_0484162367">0484162367</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="register">register</string>
    <string name="continue_btn1">continue</string>
    <string name="continue_btn">Continue</string>
    <string name="ingredients_in_pasta">ingredients in Pasta</string>
    <string name="register_1">Register</string>
</resources>