<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_order"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/dark_cyan"
        android:layout_marginBottom="30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tv_totalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"

                android:text="@string/total_price" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:gravity="center"

                android:textStyle="bold"
                android:text="@string/_40" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/een_app"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_item_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/tv_item_amount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/x1"/>

            <TextView
                android:id="@+id/tv_item_price1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/_1"
                android:gravity="end"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/een_app"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_item_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/tv_item_amount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/x1"/>

            <TextView
                android:id="@+id/tv_item_price2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/_2_5"
                android:gravity="end"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/een_app"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_item_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/tv_item_amount3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/x1"/>

            <TextView
                android:id="@+id/tv_item_price3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/_13"
                android:gravity="end"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_item4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/een_app"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_item_name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/tv_item_amount4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/x1"/>

            <TextView
                android:id="@+id/tv_item_price4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/_5_5"
                android:gravity="end"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/een_app"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_item_name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/tv_item_amount5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/x2"/>

            <TextView
                android:id="@+id/tv_item_price5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/_8"
                android:gravity="end"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_item6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/een_app"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_item_name6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/item" />

            <TextView
                android:id="@+id/tv_item_amount6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/x1"/>

            <TextView
                android:id="@+id/tv_item_price6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/_10"
                android:gravity="end"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_order"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>